GNOME Bugzilla – Bug 764966
oggdemux: Gaps when playing test sine wave VBR file
Last modified: 2016-06-16 10:15:50 UTC
Created attachment 325821 [details] ogg vorbis file that is played with a gap When playing a test sine wave file, after ~2 seconds, a gap can be heard. This gap is caused by a gap event. A git bisect reveals that commit 87fd62811d759bd2b6dfb22cf7638b2d70979560 "oggdemux: fix seeking in files with a "missing" stream" caused this. Prior to this commit, the file plays without any gaps. This commit was added as part of https://bugzilla.gnome.org/show_bug.cgi?id=745980 . I am not sure if the file itself is broken or if this is a bug in oggdemux, but with VLC, ffplay, mplayer, the file plays fine. oggdec also decodes without a gap.
Created attachment 325995 [details] [review] fix audio glitches with low bitrate vorbis
commit 2ac5bd293b16714085dc72ae23c4adf834c1db56 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Thu Apr 14 14:02:27 2016 +0100 oggdemux: fix audio glitches with low bitrate vorbis A low bitrate stream which can pack more than 2 seconds of audio in a page would cause the stream's position to be updated not often enough, and would trigger a spurious "jump" via a GAP event. Instead, we update the stream position after calculating the new overall segment position. https://bugzilla.gnome.org/show_bug.cgi?id=764966